# spillover

./: .gitignore  AGENTS.md  Cargo.toml  README.md  cliff.toml  justfile
.github/workflows/: release.yml
spillover/: Cargo.toml  README.md
spillover-bio/: Cargo.toml  README.md
spillover-bio/examples/: 01_illumina_quickstart.rs  02_keyed_vs_unkeyed_tradeoff.rs  03_quality_tiebreak_across_spills.rs  04_dedup_sequence.rs  05_codec_compaction.rs  06_alternate_orders.rs  07_arena_backed_ingest.rs  README.md
spillover-bio/src/: codec.rs  error.rs  key.rs  lib.rs  radix.rs  record.rs  sort.rs
spillover-bio/tests/: sort_pipeline.rs
spillover/examples/: 01_basic_u64_sort.rs  02_custom_record_and_sort_key.rs  03_reverse_and_custom_compare.rs  04_adjacent_dedup.rs  05_keyed_codec_merge.rs  06_spill_controls.rs  README.md
spillover/src/: chunk.rs  codec.rs  compare.rs  dedup.rs  error.rs  key.rs  lib.rs  merge.rs  sorter.rs
