[package]
name = "spillover-bio"
description = "Genomics-opinionated disk-spilling sort for FASTQ/FASTA records"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitnuc = "0.4.1"
dryice-bio = "0.1.2"
get-size2 = { version = "0.7.4", features = ["derive"] }
spillover = { version = "0.1.0", path = "../spillover" }

[lints]
workspace = true

[dev-dependencies]
proptest = { workspace = true }
