[package]
name = "spillover-bio"
description = "Genomics-focused disk-spilling sort pipeline for FASTQ/FASTA sequence records"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[features]
rayon = ["spillover/rayon"]

[dependencies]
bitnuc = "0.4.1"
dryice-bio = "0.1.2"
get-size2 = { version = "0.7.4", features = ["derive"] }
spillover = { version = "0.2.0", path = "../spillover" }
thiserror = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
proptest = { workspace = true }
